--- a/source/scss/views/layout/_footer.scss
+++ b/source/scss/views/layout/_footer.scss
@@ -121,7 +121,13 @@ body {
         width: 100%;
         height: auto;
         max-width: 160px;
-        margin-top: 30px;
+    }
+    .text{
+        height: 30px;
+        line-height: 30px;
+        text-align: center;
+        font-size: 12px;
+        color: #333333;
     }
 }
 
